the character can now move

--- a/hw3.html
+++ b/hw3.html
@@ -1,16 +1,16 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
     <title>title</title>
   </head>
   <body>
-    <button type="button" id="NW">Northwest</button>
-    <button type="button" id="NE">NorthEast</button>
-    <button type="button" id="SW">Southwest</button>
-    <button type="button" id="SE">Southeast</button>
-    <button type="button" id="DW">Due West</button>
-    <button type="button" id="DE">Due East</button>
+    <button type="button" id="NW" onClick = moveHero(-1,-1) >Northwest</button>
+    <button type="button" id="NE" onClick = "moveHero(-1,1)" >NorthEast</button>
+    <button type="button" id="SW" onClick = "moveHero(1,-1)" >Southwest</button>
+    <button type="button" id="SE" onClick = "moveHero(1,1)" >Southeast</button>
+    <button type="button" id="DW" onClick = "moveHero(-1,0)" >Due West</button>
+    <button type="button" id="DE" onClick = "moveHero(1,0)" >Due East</button>
     <script src="hw3.js"> </script>
   
   </body>
