added html string for the directional buttons plus basic outlines on how combat will work

--- a/hw3.html
+++ b/hw3.html
@@ -5,6 +5,7 @@
     <title>title</title>
   </head>
   <body>
+    <div id="buttonField">
     <button type="button" id="NW" onClick = moveHero(-1,-1) >Northwest</button>
     <button type="button" id="NE" onClick = "moveHero(-1,1)" >NorthEast</button>
     <button type="button" id="SW" onClick = "moveHero(1,-1)" >Southwest</button>
@@ -12,7 +13,7 @@
     <button type="button" id="DW" onClick = "moveHero(-1,0)" >Due West</button>
     <button type="button" id="DE" onClick = "moveHero(1,0)" >Due East</button>
     <script src="hw3.js"> </script>
-  
+    </div>
   </body>
 </html>
 
