need to figure out the visual component, but everything is looking strong

--- a/hw3.html
+++ b/hw3.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>OlinMao Tilegame</title>
   </head>
   <body>
     <div id="buttonField">
-    <button type="button" id="NW" onClick = moveHero(-1,-1) >Northwest</button>
-    <button type="button" id="NE" onClick = "moveHero(-1,1)" >NorthEast</button>
-    <button type="button" id="SW" onClick = "moveHero(1,-1)" >Southwest</button>
-    <button type="button" id="SE" onClick = "moveHero(1,1)" >Southeast</button>
-    <button type="button" id="DW" onClick = "moveHero(-1,0)" >Due West</button>
-    <button type="button" id="DE" onClick = "moveHero(1,0)" >Due East</button>
-    <script src="hw3.js"> </script>
+    <button type="button" id="NW" onclick = "moveHero(-1,-1)" >Northwest</button>
+    <button type="button" id="NE" onclick = "moveHero(-1,1)" >NorthEast</button>
+    <button type="button" id="SW" onclick = "moveHero(1,-1)" >Southwest</button>
+    <button type="button" id="SE" onclick = "moveHero(1,1)" >Southeast</button>
+    <button type="button" id="DW" onclick = "moveHero(-1,0)" >Due West</button>
+    <button type="button" id="DE" onclick = "moveHero(1,0)" >Due East</button>
     </div>
   </body>
+  <script src ="hw3.js"></script>
 </html>
 
