didn't finish all the features on time, but worth wile to make it work

--- a/hw3.html
+++ b/hw3.html
@@ -5,13 +5,10 @@
     <title>OlinMao Tilegame</title>
   </head>
   <body>
+    <div id="cnvs">
+    <canvas id = "gameGrid" width="600" height ="400"></canvas>
+    </div>
     <div id="buttonField">
-    <button type="button" id="NW" onclick = "moveHero(-1,-1)" >Northwest</button>
-    <button type="button" id="NE" onclick = "moveHero(-1,1)" >NorthEast</button>
-    <button type="button" id="SW" onclick = "moveHero(1,-1)" >Southwest</button>
-    <button type="button" id="SE" onclick = "moveHero(1,1)" >Southeast</button>
-    <button type="button" id="DW" onclick = "moveHero(-1,0)" >Due West</button>
-    <button type="button" id="DE" onclick = "moveHero(1,0)" >Due East</button>
     </div>
   </body>
   <script src ="hw3.js"></script>
