changed html title

--- a/hw3.html
+++ b/hw3.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>OlinMao Tilegame</title>
+    <title>Tile Game</title>
   </head>
-  <body>
+  <body>   
+    <--use firefox>
     <div id="cnvs">
-    <canvas id = "gameGrid" width="600" height ="400"></canvas>
+        <canvas id = "gameGrid" width="600" height ="400"></canvas>
     </div>
-    <div id="buttonField">
+         <div id="buttonField">
     </div>
   </body>
   <script src ="hw3.js"></script>
